pathfinder/compiler/semantics/tests/recursion/Tests/recursion5.stable.err
stderr of test 'recursion5` in directory 'compiler/semantics/tests/recursion` itself:


# 18:07:15 >  
# 18:07:15 >  Mtimeout -timeout 60 ./recursion5 recursion5 
# 18:07:15 >  

type error: recursion is only possible on node types (got xs:integer)
# halted in typecheck.brg (reduce), line 1206

# 18:07:15 >  
# 18:07:15 >  Done.
# 18:07:15 >  

